<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpl_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prakarn.jrs@gmail.com">Prakarn Jaroonsorn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>rclpy</buildtool_depend>

  <build_depend>moveit_common</build_depend>
  <build_depend>pj_moveit2_msgs</build_depend>

  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
