<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpl_robot</name>
  <version>0.0.0</version>
  <description>Meta package for bpl_robot</description>
  <maintainer email="prakarn.jrs@gmail.com">Prakarn Jaroonsorn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>bravo_7_bringup</exec_depend>
  <exec_depend>bpl_controllers</exec_depend>
  <exec_depend>bravo_7_moveit_config</exec_depend>
  <exec_depend>bpl_protocol</exec_depend>
  <exec_depend>bpl_robot_driver</exec_depend>
  <exec_depend>bpl_ros2_control_test_nodes</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
