<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpl_robot_driver</name>
  <version>0.0.0</version>
  <description>bpl robot driver</description>
  <maintainer email="prakarn.jrs@gmail.com">Prakarn Jaroonsorn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <build_depend>bpl_protocol</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
